syntax = "proto3";

package dev_observer.api.web.tokens;

import "dev_observer/api/types/repo.proto";

message ListTokensRequest {
  // Optional namespace filter
  optional string namespace = 1;
}

message ListTokensResponse {
  repeated dev_observer.api.types.repo.RepoToken tokens = 1;
}

message AddTokenRequest {
  dev_observer.api.types.repo.RepoToken token = 1;
}

message AddTokenResponse {
  dev_observer.api.types.repo.RepoToken token = 1;
}

message GetTokenResponse {
  dev_observer.api.types.repo.RepoToken token = 1;
}

message UpdateTokenRequest {
  string token = 1;
}

message UpdateTokenResponse {
  dev_observer.api.types.repo.RepoToken token = 1;
}

message DeleteTokenResponse {
}